--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "leaflet": "^1.9.4"
+  },
   "devDependencies": {
     "vite": "^7.2.4",
     "vite-plugin-pwa": "^1.2.0"
